--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "start": "node ./bin/www",
     "stop": "pkill --signal SIGINT quiz"
   },
+  "engines": {
+    "node": "~0.10.37",
+    "npm": "~1.4.28"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.0.9"
+  },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -14,6 +21,9 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
+    "pg": "^4.1.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.5.1",
     "serve-favicon": "~2.1.3"
   }
 }
