--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www",
     "stop": "pkill --signal SIGINT quiz"
   },
+  "engines": {
+  	"node": "~0.10.37",
+  	"npm": "~1.4.28"
+  },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
